--- a/style.css
+++ b/style.css
@@ -34,3 +34,15 @@ p, li, span, input, label, textarea {
     border-bottom: 1px solid var(--borderColor);
     overflow: auto;
 }
+
+.main-container {
+   width: 1280px;
+   margin: 0 auto;
+ }
+
+@media screen and (max-width: 1200px) {
+.main-container {
+  width: 95%;
+}
+}
+
