--- a/style.css
+++ b/style.css
@@ -46,3 +46,18 @@ p, li, span, input, label, textarea {
 }
 }
 
+a  {
+  text-decoration: none; 
+  color: #17a2b8;
+}
+
+ul {
+  list-style: none;
+}
+
+h1 { font-size:56px;}
+h2 { font-size: 36px;)
+h3 { font-size: 28px;}
+h4 { font-size: 24px;}
+h5 { font-size: 20px;}
+h6 { font-size: 16px;}
