--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ ul {
 }
 
 h1 { font-size:56px;}
-h2 { font-size: 36px;)
+h2 { font-size: 36px;}
 h3 { font-size: 28px;}
 h4 { font-size: 24px;}
 h5 { font-size: 20px;}
