--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ html, body {
 
 h1, h2, h3, h4, h5, h6, strong {
     color: var(--mainText);
+    font-family: "Russo", sans-serif;
 }
 
 p, li, span, input, label, textarea {
