--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ h1, h2, h3, h4, h5, h6, strong {
 
 p, li, span, input, label, textarea {
     color: var(----secondaryText);
-    font-family: "Source Sans Pro", sans-serif;
+    font-family: "Poppins", sans-serif;
 }
 
 .s1 {
